--- a/package.json
+++ b/package.json
@@ -36,14 +36,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@googlemaps/markerclusterer": "^2.5.0",
     "@react-google-maps/api": "^2.19.2",
     "@types/google.maps": "^3.54.3",
-    "react-router-dom": "^6.16.0"
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
+    "dotenv": "^16.3.1",
+    "react-router-dom": "^6.16.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
